<resources>
    <string name="app_name">ShabrawyOrthodroid</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember Me</string>
    <string name="title_activity_tab">tab</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="patient_info">Patient Info</string>
    <string name="history">History</string>
    <string name="examination">Examination</string>
    <string name="investigation">investigation</string>
    <string name="operation">Operation</string>
    <string name="Surgery">Surgery</string>


</resources>
